[package]

name = "iron_error_logger"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>", "Jonathan Reem <jonathan.reem@gmail.com>", "Michael Reinhard <mcreinhard@gmail.com>"]
description = "Logging middleware for the Iron framework."
repository = "https://github.com/iron/logger"
keywords = ["iron", "web", "logger", "log", "timer"]
license = "MIT"

[dependencies]
iron = { version = "0.4", default-features = false }
log = "0.3.6"
time = "0.1.35"
error-chain="0.7"

[dev-dependencies]
env_logger = "0.3.5"
